extends Control


func _on_Start_button_pressed() -> void:
	get_tree().change_scene_to_file("res://Scene/test.tscn") # Replace with function body.


func _on_Setting_button_2_pressed() -> void:
	print("press setting") # Replace with function body.


func _on_Exit_button_3_pressed() -> void:
	get_tree().quit() # Replace with function body.
